--- a/Final Gal 21 Dec/Gallery Files/gallery.html
+++ b/Final Gal 21 Dec/Gallery Files/gallery.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -54,7 +53,7 @@
     <nav class="navbar navbar-expand-md navbar-dark" style="background-color:#26416c; box-shadow: none !important;">
         <div class="container-fluid">
             <a href="{% url 'home-page' %}" class="navbar-brand">
-                <img src="{% static 'pages/landingpage-bg/chapter-inv-logo.png' %}" style="height: 70px; margin: 10px">
+                <img src="" style="height: 70px; margin: 10px">
             </a>
 
             <button type="button" class="navbar-toggler collapsed" data-toggle="collapse" data-target="#main-nav">
@@ -408,7 +407,7 @@
             <div class="container-fluid">
                 <div class="row" style="overflow: hidden">
                     <div class="col-md-2 offset-md-1 footer-about">
-                        <img src="{% static 'pages/landingpage-bg/chapter-inv-logo.png' %}" style="height: 180px;" alt="logo-footer">
+                        <img src="" style="height: 180px;" alt="logo-footer">
                     </div>
                     <div class="col-md-4 offset-md-1 footer-contact">
                         <h3>Contact</h3>
